"replaced all default  resizable handles in sort activity with custom one. Add z-index props to containers to prevent handles from overflowing""

--- a/frontend/src/app/components/activityTypes/LabelPictures/_labelPictures.scss
+++ b/frontend/src/app/components/activityTypes/LabelPictures/_labelPictures.scss
@@ -103,6 +103,7 @@ $label-pic-column-height: calc(#{$label-pic-activity-container-height} - 2rem);
 //resizable container
 .label-pic-activity-itemBank-container{
     height: fit-content;
+    z-index: 1;
 }
 .label-pic-activity-itemBank-container.full-size{
 
